--- a/client/src/styles/Header.scss
+++ b/client/src/styles/Header.scss
@@ -6,4 +6,11 @@
 .filters {
     display: flex;
     justify-content: center;
+    flex-direction: row;
+
+}
+
+.sliderContainer {
+    max-width: 300px;
+    
 }
