--- a/client/src/styles/PhoneCard.scss
+++ b/client/src/styles/PhoneCard.scss
@@ -1,4 +1,9 @@
 .phonecard {
-    border: 1px solid black;
     cursor: pointer;
+    width: 18rem;
+}
+
+.tags {
+    padding: 6px;
+    margin: 0 5px 0 5px;
 }
