adding some styling

--- a/client/src/styles/Header.scss
+++ b/client/src/styles/Header.scss
@@ -1,6 +1,10 @@
 .header {
-    min-height: 4em;
+    min-height: 4.5em;
     border: 1px solid black;
+}
+
+.logo {
+    color: white;
 }
 
 .filters {
