--- a/client/src/styles/Main.scss
+++ b/client/src/styles/Main.scss
@@ -4,3 +4,18 @@
         color: green;
     }
 }
+
+Button {
+    margin: 5px;
+}
+
+.sectionTitle {
+    margin: 5px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.sectionSubtitle {
+    margin: 15px 0px 15px 0px;
+    text-align: center;
+}
