--- a/client/src/styles/Main.scss
+++ b/client/src/styles/Main.scss
@@ -19,3 +19,21 @@ Button {
     margin: 15px 0px 15px 0px;
     text-align: center;
 }
+
+.link {
+    margin: 0;
+    padding: 0;
+    color: darkslategrey;
+    text-decoration: none;
+}
+
+.link:hover {
+    margin: 0;
+    padding: 0;
+    color: darkslategrey;
+    text-decoration: underline;
+}
+
+h3 {
+    margin: 10px;
+}
