--- a/client/src/styles/Checkout.scss
+++ b/client/src/styles/Checkout.scss
@@ -1,6 +1,6 @@
 .checkout {
     background-color: #f2f2f2;
-    height: 1vh;
+    height: 100vh;
     &__header {
         background-color: darkslategray;
         min-height: 5em;
@@ -15,8 +15,14 @@
     }
 
     &__tile {
-        background-color: white;
-        color: black;
-        min-height: ;
+        background-color: #fff;
+        color: #000;
+        border-radius: 0.5em;
+        min-height: 5em;
+        padding: 1em;
+    }
+
+    &__list {
+        padding: 1em;
     }
 }
