--- a/client/src/styles/SinglePhone.scss
+++ b/client/src/styles/SinglePhone.scss
@@ -1,8 +1,117 @@
+$main-text-color: #000;
+$secondary-text-color: grey;
+
 .reviewInfo {
     flex: 5;
-    flex-direction: "column"
+    flex-direction: "column";
 }
 
 .center {
     text-align: center;
 }
+
+.singlephone {
+    // background-color: rgb(250, 250, 250);
+    padding-top: 2em;
+
+    &__info {
+        margin-left: 2em;
+        // div:not(:last-child) {
+        //     margin-bottom: 0.2em;
+        // }
+        &__label {
+            font-weight: bold;
+            font-size: larger;
+        }
+
+        &__value {
+            color: $secondary-text-color;
+        }
+    }
+
+    &__cart {
+        margin-right: 0.4em;
+        border-radius: 9px;
+        // border: 0.5px solid grey;
+        box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.1);
+        background-color: #f2f2f2f2;
+
+        &__label {
+            font-weight: bold;
+            font-size: medium;
+        }
+
+        &__value {
+            color: $secondary-text-color;
+        }
+    }
+
+    &__image {
+        width: 500px;
+    }
+
+    &__title {
+        font-size: 3em;
+    }
+
+    &__brand {
+        font-size: 1.5em;
+        margin-bottom: 0.3em;
+        color: grey;
+    }
+
+    &__price {
+        margin-top: 1.5em;
+        padding: 1em 0;
+        font-size: larger;
+        font-weight: bold;
+    }
+
+    &__rating {
+    }
+
+    &__stock {
+        margin-top: 1.5em;
+        font-weight: bold;
+        background-color: white;
+        border-radius: 10px;
+        padding: 0.8em 1em;
+    }
+
+    &__stock {
+    }
+
+    &__seller {
+    }
+
+    &__cartquantity {
+        margin-top: 1.5em;
+        font-weight: bold;
+        background-color: white;
+        border-radius: 10px;
+        padding: 0.8em 1em;
+    }
+}
+
+// <h2 className="singlephone__brand">
+// {phone.brand}
+// </h2>
+// <h3 className="singlephone__title">
+// {phone.title}
+// </h3>
+// <h3 className="singlephone__price">
+// ${phone.price.toFixed(2)}
+// </h3>
+// <h3 className="singlephone__rating">
+// <Stars num={phone.RatingAverage} />
+// </h3>
+// <div className="singlephone__stock">
+// In stock: {phone.stock}
+// </div>
+// <div className="singlephone__seller">
+// Seller: {phone.seller.firstname}{" "}
+// {phone.seller.lastname}
+// </div>
+// <div className="singlephone__cartquantity">
+// Quantity in cart: {numInCart}
+// </div>
